Add rbenv and Gemfile

--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,6 @@ paginate: 5
 auto: true
 url: http://www.bounga.org
 name: Bounga's Home
-exclude: ['README', 'Rakefile']
+exclude: ['README', 'Rakefile', 'vendor']
 destination: public
+markdown: kramdown
