Update file to ignore for website generation

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,6 @@ paginate: 5
 auto: true
 url: http://www.bounga.org
 name: Bounga's Home
-exclude: ['README', 'Rakefile', 'vendor', 'Gemfile', 'Gemfile.lock']
+exclude: ['README.md', 'Rakefile', 'vendor', 'Gemfile', 'Gemfile.lock']
 destination: public
 markdown: maruku
