--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 future: false
 lsi: false
-pygments: true
+highlighter: pygments
 permalink: pretty
 paginate: 5
 url: http://www.bounga.org
 name: Bounga's Home
 exclude: ['README.md', 'Rakefile', 'vendor', 'Gemfile', 'Gemfile.lock']
 destination: public
-markdown: maruku
+markdown: kramdown
+timezone: Europe/Paris
