--- a/.hgignore
+++ b/.hgignore
@@ -1,8 +1,7 @@
 syntax: glob
 .DS_Store
-public/*
-_includes/tags.html
-tags/*
-categories/*
+_site/*
 vendor/bundle
 .bundle/config
+.sass-cache
+.jekyll-metadata
