Update Rake task for production build and deployment

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title: "Bounga's Home"
 title_separator: "-"
 name: "Nicolas Cavigneaux"
 description: "Thoughts about Ruby, Rails, Hanami, Elixir, Phoenix, Javascript and Unix."
-url: "http://www.bounga.org"
+url: "https://www.bounga.org"
 baseurl: # the subpath of your site, e.g. "/blog"
 repository: # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: "/assets/images/default-teaser.jpg"
